[Survival] Fix half-size cell black text on dark mode

--- a/assets/shared/dark.css
+++ b/assets/shared/dark.css
@@ -4,7 +4,7 @@
 h1, h2, h3, h4, table:not(.poll):not(.rendering), label, li, figcaption, p:not(.language):not(.descr):not(#ack), caption:not(#legend), #nav {
     color: white;
 }
-#modal_inner h1, #modal_inner h2, #modal_inner th, #modal_inner td, .rendering th, .rendering td:not(.overview) {
+#modal_inner h1, #modal_inner h2, #modal_inner th, #modal_inner td, .rendering th, .rendering td:not(.overview):not(.overview_half) {
     color: black;
 }
 body, div:not(.dropdown):not(.dropdown_content):not(.nav_right):not(.dark_bg) {
